<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simplecalc.MainActivity" >

    <TableRow>
        <TextView android:textSize="14sp"
            android:text="@string/information"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_marginLeft="20dip"
            android:text="@string/first_number"/>
        <EditText android:id="@+id/firstNumber"
            android:hint="@string/first_hint"
            android:inputType="number"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_marginLeft="20dip"
            android:text="@string/second_number"/>
        <EditText android:id="@+id/secondNumber"
            android:hint="@string/second_hint"
            android:inputType="number"/>
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/calc_type_text"
            android:layout_marginLeft="20dip"
            android:text="@string/calculation_type"/>
        <TextView android:id="@+id/calc_type"
            android:text="@string/undo_calc_type"/>

        <Button
            android:id="@+id/selectType"
            android:text="@string/select_type" />

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/calculate"
            android:text="@string/calculate_text" />
    </TableRow>
 
</TableLayout>
