<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@string/selectCalcTypeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup android:id="@+id/group"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/addition"
            android:text="@string/addition"/>
        <RadioButton android:id="@+id/minus"
            android:text="@string/minus"/>
        <RadioButton android:id="@+id/multiply"
            android:text="@string/multiply"/>
        <RadioButton android:id="@+id/divider"
            android:text="@string/divider"/>
    </RadioGroup>
    <Button android:id="@+id/ok"
        android:text="@string/ok_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
